--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
       "@/*": ["./src/*"]
     },
   },
+  "noEmit": true,
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
-
+  ],
+  "include": ["src"],
 }
