--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "printWidth": 120,
+    "tabWidth": 4,
+    "useTabs": true
 }
